working on the special conditions page

--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -65,13 +65,13 @@
                 <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="52" height="28" alt="Ducklings circling"></td>
                 <td>10</td>
                 <td></td>
-                <td>Spin Trap<br>Spoiled Riceball<br>Talk Seed<br>[Gazer Family]<br>(Possession Staff)</td>
+                <td>Spin Trap<br>Spoiled Riceball<br>Talk Seed<br>[Gazer F.]<br>(Possession Staff)</td>
                 <td>Otogiriso</td>
               </tr>
               <tr>
                 <td>20</td>
                 <td></td>
-                <td>Spin Trap<br>Talk Seed<br>[Gazer Family]</td>
+                <td>Spin Trap<br>Talk Seed<br>[Gazer F.]</td>
                 <td>Otogiriso</td>
               </tr>
               <tr>
@@ -164,7 +164,7 @@
                 <td rowspan="2">Character<br>frozen in ice</td>
                 <td>1</td>
                 <td></td>
-                <td rowspan="2">Talk Seed<br>[Aqua Dragon Family]</td>
+                <td rowspan="2">Talk Seed<br>[Aqua Dragon F.]</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
@@ -251,8 +251,77 @@
           <h3 id="shiren_exclusive_condition_basics">Shiren Exclusive Condition Basics</h3>
           <p>Whereas status conditions include many negative effects, most Shiren-exclusive effects are positive,<br>and none of them wear off based on the number of turns that have passed.</p>
           <h3 id="shiren_exclusive_condition_list">Shiren Exclusive Condition List</h3>
-          <p>The "Turns" column is used to show effect duration.<br>"Floor" in the Turns column means the effect lasts the entire time spent on the current floor.<br>See the "Cure" column for rows with "-" for Turns to see how the effect wears off.</p>
-          <p>Table</p>
+          <p>The "Turns" column is used to show effect duration.<br>"Floor" in the Turns column means the effect lasts the entire time spent on the current floor.</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Visual</th>
+                <th>Turns</th>
+                <th>Information</th>
+                <th>Cause</th>
+                <th>Cure</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Starvation</td>
+                <td>HP and Level<br>turns dark</td>
+                <td>-</td>
+                <td></td>
+                <td>Turns passing<br>[Hunger Puppet F.]</td>
+                <td>Riceballs<br>Squid Sushi Scroll<br>Grass, Seed (Eat)<br>Gobo (Eat)<br>Dried Bonito (Bite)<br>Perfect Water</td>
+              </tr>
+              <tr>
+                <td>Hollow</td>
+                <td>White eyes</td>
+                <td>-</td>
+                <td></td>
+                <td>Possession Staff</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Sight</td>
+                <td>None</td>
+                <td>Floor</td>
+                <td></td>
+                <td>Sight Grass (Eat)</td>
+                <td>Iron Sand Items<br>Spoiled Riceball</td>
+              </tr>
+              <tr>
+                <td>Sleepless</td>
+                <td>None</td>
+                <td>Floor</td>
+                <td></td>
+                <td>Specialty Riceball</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Poison Immunity</td>
+                <td>None</td>
+                <td>Floor</td>
+                <td></td>
+                <td>Specialty Riceball</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Pick up Identify</td>
+                <td>None</td>
+                <td>Floor</td>
+                <td></td>
+                <td>Specialty Riceball</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>No Hunger</td>
+                <td>None</td>
+                <td>Floor</td>
+                <td></td>
+                <td>Specialty Riceball</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </main>
     </div>
