--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -23,7 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Special Conditions</h2>
-          <p>Special conditions fall into two categories - status conditions (ailments) and Shiren-exclusive effects.<br>Status conditions and Shiren-exclusive effects both include negative and positive effects.<br>This page includes information on how status conditions affect monsters as well.</p>
+          <p>Special conditions fall into two categories - status conditions (ailments) and Shiren-exclusive effects.<br>Status conditions and Shiren-exclusive effects both include negative and positive effects.<br>This page also includes information on how status conditions affect monsters.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#status_conditions_ailments">Status Conditions (Ailments)</a>
               <ul>
@@ -62,158 +62,158 @@
             <tbody>
               <tr>
                 <td rowspan="2">Confusion</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="52" height="28" alt="Ducklings circling"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="91" height="135" alt="Confused Mamel"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Spin Trap<br>Spoiled Riceball<br>Talk Seed<br>[Gazer F.]<br>(Possession Staff)</td>
                 <td>Otogiriso</td>
               </tr>
               <tr>
                 <td>20</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Spin Trap<br>Talk Seed<br>[Gazer F.]</td>
                 <td>Otogiriso</td>
               </tr>
               <tr>
                 <td>Fear</td>
-                <td><img src="/shiren2/image/condition/fear.png" width="" height="" alt="Fear icon"></td>
+                <td><img src="/shiren2/image/condition/fear.png" width="91" height="155" alt="Fearing Mamel"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Fear Scroll</td>
                 <td>-</td>
               </tr>
               <tr>
                 <td rowspan="2">Slow</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/slow.png" width="34" height="44" alt="God of slowness"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/slow.png" width="70" height="119" alt="Slowed Mamel"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Slow Trap<br>Slow Staff<br>Poison Grass<br>Talk Seed<br>[Demon Scorpion]<br>[Monarch Tusker]</td>
                 <td rowspan="2">Swift Grass<br>Swift Staff</td>
               </tr>
               <tr>
                 <td>∞</td>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
               <tr>
                 <td rowspan="2">Swift</td>
                 <td rowspan="2">Faster idle<br>animation</td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Swift Grass<br>Swift Staff<br>[Bat Kangaroo]</td>
                 <td rowspan="2">Slow Staff<br>Slow Trap<br>Poison Grass</td>
               </tr>
               <tr>
                 <td>20</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Swift Grass<br>Swift Staff<br>Slumber Scroll<br>[Bat Kangaroo]</td>
               </tr>
               <tr>
                 <td rowspan="2">Blindness</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/blindness.png" width="16" height="16" alt="Blindness icon"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/blind.png" width="70" height="109" alt="Blind Mamel"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Iron Sand Items<br>Spoiled Riceball</td>
                 <td>Sight Grass (Eat)</td>
               </tr>
               <tr>
                 <td>∞</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Iron Sand Items</td>
                 <td>-</td>
               </tr>
               <tr>
                 <td rowspan="2">Invisible</td>
-                <td rowspan="2">Invisible<br>character</td>
+                <td rowspan="2"><img src="/shiren2/image/condition/invisible.png" width="70" height="88" alt="Invisible Mamel"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Invisible Staff<br>[Devil Kangaroo]</td>
                 <td>-</td>
               </tr>
               <tr>
                 <td>20</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td><a href="/shiren2/html/item/scrolls.html#identify_scroll">識 seal</a></td>
               </tr>
               <tr>
                 <td rowspan="2">Miss</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/miss.png" width="24" height="15" alt="Miss icon"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/miss.png" width="67" height="121" alt="Missing Mamel"></td>
                 <td>25</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Miss Staff</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>30</td>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
               <tr>
                 <td rowspan="2">Sleep</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/sleep.png" width="26" height="31" alt="Sleep icon"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/sleep.png" width="78" height="89" alt="Sleeping Mamel"></td>
                 <td>5</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Sleep Gas<br>Sleep Statue<br>Spoiled Riceball<br>Talk Seed</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>5</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Sleep Gas<br>Sleep Statue<br>Talk Seed<br>Slumber Scroll<br><a href="/shiren2/html/item/scrolls.html#slumber_scroll">眠 seal</a></td>
               </tr>
               <tr>
-                <td rowspan="2">Frozen</td>
-                <td rowspan="2">Character<br>frozen in ice</td>
+                <td rowspan="2">Freeze</td>
+                <td rowspan="2"><img src="/shiren2/image/condition/freeze.png" width="63" height="70" alt="Frozen Mamel"></td>
                 <td>1</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Talk Seed<br>[Aqua Dragon F.]</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
               <tr>
                 <td rowspan="2">Paralysis</td>
-                <td rowspan="2">Character<br>turns yellow</td>
+                <td rowspan="2"><img src="/shiren2/image/condition/paralysis.png" width="65" height="70" alt="Paralyzed Mamel"></td>
                 <td>3</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Slow Staff<br>[Stun Scorpion]<br>[Monarch Tusker]<br>[Rock Beast]<br>[Boulder Beast]</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
               <tr>
                 <td rowspan="2">Seal</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/seal.png" width="" height="" alt="Seal icon"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/seal.png" width="72" height="124" alt="Sealed Mamel"></td>
                 <td>35</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Seal Staff<br>[King Tusker]</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>∞</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Seal Staff<br>Strip Trap<br>[King Tusker]<br>[Monsoon Doll]</td>
               </tr>
               <tr>
                 <td rowspan="2">Riceball</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/riceball.png" width="" height="" alt="Riceball"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/riceball.png" width="74" height="71" alt="Riceball"></td>
                 <td>10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td><a href="/shiren2/html/item/food.html#riceball">飯 seal</a> (shield)<br>[Nigiri Boss]<br>[Nigiri Master]</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>∞</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>[Nigiri Boss]<br>[Nigiri Master]</td>
               </tr>
               <tr>
                 <td rowspan="2">Stasis</td>
                 <td rowspan="2">Character<br>stops moving</td>
                 <td>40</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2">Talk Seed</td>
                 <td rowspan="2">-</td>
               </tr>
@@ -223,26 +223,26 @@
               </tr>
               <tr>
                 <td rowspan="2">Pot</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/pot.png" width="" height="" alt="Turn into a pot"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/pot.png" width="86" height="84" alt="Pot"></td>
                 <td>3~8</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2"><a href="/shiren2/html/item/pots.html#sticky_pot">Sticky Pot</a></td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
                 <td>5~8</td>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
               <tr>
                 <td rowspan="2">Boost</td>
-                <td rowspan="2">No visual</td>
+                <td rowspan="2">None</td>
                 <td rowspan="2">10</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td rowspan="2"><a href="/shiren2/html/item/grass.html#boost_grass">Boost Grass</a> (Eat)</td>
                 <td rowspan="2">-</td>
               </tr>
               <tr>
-                <td></td>
+                <td class="text_left"></td>
               </tr>
             </tbody>
           </table>
@@ -266,17 +266,17 @@
             <tbody>
               <tr>
                 <td>Starvation</td>
-                <td>HP and Level<br>turns dark</td>
+                <td><img src="/shiren2/image/condition/starvation.png" width="127" height="44" alt="Darker UI"></td>
                 <td>-</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Turns passing<br>[Hunger Puppet F.]</td>
                 <td>Riceballs<br>Squid Sushi Scroll<br>Grass, Seed (Eat)<br>Gobo (Eat)<br>Dried Bonito (Bite)<br>Perfect Water</td>
               </tr>
               <tr>
                 <td>Hollow</td>
-                <td>White eyes</td>
+                <td><img src="/shiren2/image/condition/hollow.png" width="77" height="86" alt="White eyes"></td>
                 <td>-</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Possession Staff</td>
                 <td>-</td>
               </tr>
@@ -284,7 +284,7 @@
                 <td>Sight</td>
                 <td>None</td>
                 <td>Floor</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Sight Grass (Eat)</td>
                 <td>Iron Sand Items<br>Spoiled Riceball</td>
               </tr>
@@ -292,7 +292,7 @@
                 <td>Sleepless</td>
                 <td>None</td>
                 <td>Floor</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Specialty Riceball</td>
                 <td>-</td>
               </tr>
@@ -300,7 +300,7 @@
                 <td>Poison Immunity</td>
                 <td>None</td>
                 <td>Floor</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Specialty Riceball</td>
                 <td>-</td>
               </tr>
@@ -308,7 +308,7 @@
                 <td>Pick up Identify</td>
                 <td>None</td>
                 <td>Floor</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Specialty Riceball</td>
                 <td>-</td>
               </tr>
@@ -316,7 +316,7 @@
                 <td>No Hunger</td>
                 <td>None</td>
                 <td>Floor</td>
-                <td></td>
+                <td class="text_left"></td>
                 <td>Specialty Riceball</td>
                 <td>-</td>
               </tr>
