adjust image alt text

--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -62,7 +62,7 @@
             <tbody>
               <tr>
                 <td rowspan="2">Confusion</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="91" height="135" alt="Confused Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="91" height="135" alt="Ducklings circle"></td>
                 <td>10</td>
                 <td class="text_left"></td>
                 <td>Spin Trap<br>Spoiled Riceball<br>Talk Seed<br>[Gazer F.]<br>(Possession Staff)</td>
@@ -76,7 +76,7 @@
               </tr>
               <tr>
                 <td>Fear</td>
-                <td><img src="/shiren2/image/condition/fear.png" width="91" height="155" alt="Fearing Mamel"></td>
+                <td><img src="/shiren2/image/condition/fear.png" width="91" height="155" alt="Sweat icon"></td>
                 <td>10</td>
                 <td class="text_left"></td>
                 <td>Fear Scroll</td>
@@ -84,7 +84,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Slow</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/slow.png" width="70" height="119" alt="Slowed Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/slow.png" width="70" height="119" alt="God of Slowness"></td>
                 <td>10</td>
                 <td class="text_left"></td>
                 <td rowspan="2">Slow Trap<br>Slow Staff<br>Poison Grass<br>Talk Seed<br>[Demon Scorpion]<br>[Monarch Tusker]</td>
@@ -109,7 +109,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Blindness</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/blind.png" width="70" height="109" alt="Blind Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/blind.png" width="70" height="109" alt="Crossed out eyes"></td>
                 <td>10</td>
                 <td class="text_left"></td>
                 <td>Iron Sand Items<br>Spoiled Riceball</td>
@@ -123,7 +123,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Invisible</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/invisible.png" width="70" height="88" alt="Invisible Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/invisible.png" width="70" height="88" alt="Sprite vanishes"></td>
                 <td>10</td>
                 <td class="text_left"></td>
                 <td rowspan="2">Invisible Staff<br>[Devil Kangaroo]</td>
@@ -136,7 +136,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Miss</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/miss.png" width="67" height="121" alt="Missing Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/miss.png" width="67" height="121" alt="Miss icon"></td>
                 <td>25</td>
                 <td class="text_left"></td>
                 <td rowspan="2">Miss Staff</td>
@@ -148,7 +148,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Sleep</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/sleep.png" width="78" height="89" alt="Sleeping Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/sleep.png" width="78" height="89" alt="Sleeping zZz"></td>
                 <td>5</td>
                 <td class="text_left"></td>
                 <td>Sleep Gas<br>Sleep Statue<br>Spoiled Riceball<br>Talk Seed</td>
@@ -161,7 +161,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Freeze</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/freeze.png" width="63" height="70" alt="Frozen Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/freeze.png" width="63" height="70" alt="Blue sprite"></td>
                 <td>1</td>
                 <td class="text_left"></td>
                 <td rowspan="2">Talk Seed<br>[Aqua Dragon F.]</td>
@@ -173,7 +173,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Paralysis</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/paralysis.png" width="65" height="70" alt="Paralyzed Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/paralysis.png" width="65" height="70" alt="Yellow sprite"></td>
                 <td>3</td>
                 <td class="text_left"></td>
                 <td rowspan="2">Slow Staff<br>[Stun Scorpion]<br>[Monarch Tusker]<br>[Rock Beast]<br>[Boulder Beast]</td>
@@ -185,7 +185,7 @@
               </tr>
               <tr>
                 <td rowspan="2">Seal</td>
-                <td rowspan="2"><img src="/shiren2/image/condition/seal.png" width="72" height="124" alt="Sealed Mamel"></td>
+                <td rowspan="2"><img src="/shiren2/image/condition/seal.png" width="72" height="124" alt="Seal icon"></td>
                 <td>35</td>
                 <td class="text_left"></td>
                 <td>Seal Staff<br>[King Tusker]</td>
@@ -266,7 +266,7 @@
             <tbody>
               <tr>
                 <td>Starvation</td>
-                <td><img src="/shiren2/image/condition/starvation.png" width="127" height="44" alt="Darker UI"></td>
+                <td><img src="/shiren2/image/condition/starvation.png" width="127" height="44" alt="Level and HP"><br>UI becomes dark</td>
                 <td>-</td>
                 <td class="text_left"></td>
                 <td>Turns passing<br>[Hunger Puppet F.]</td>
