update equipment gallery images

--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -266,7 +266,7 @@
             <tbody>
               <tr>
                 <td>Starvation</td>
-                <td><img src="/shiren2/image/condition/starvation.png" width="127" height="44" alt="Level and HP"><br>UI becomes dark</td>
+                <td><img src="/shiren2/image/condition/starvation.png" width="127" height="44" alt="Level and HP"><br>UI darkens</td>
                 <td>-</td>
                 <td class="text_left"></td>
                 <td>Turns passing<br>[Hunger Puppet F.]</td>
