adjust name for confusion

--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -53,7 +53,7 @@
               <tr>
                 <th>Name</th>
                 <th>Visual</th>
-                <th>Turn</th>
+                <th>Turns</th>
                 <th>Info</th>
                 <th>Cause</th>
                 <th>Cure</th>
@@ -61,7 +61,7 @@
             </thead>
             <tbody>
               <tr>
-                <td rowspan="2">Confusion</td>
+                <td rowspan="2">Confuse</td>
                 <td rowspan="2"><img src="/shiren2/image/condition/confusion.png" width="91" height="135" alt="Ducklings circle"></td>
                 <td>10</td>
                 <td class="text_left">Movement and attack direction becomes unpredictable.<br>All other actions can be performed normally, such as stepping<br>in place, throwing items, reading scrolls, and swinging staves.<br>Attacks can hit NPCs and allies, so be careful if you have<br>a weapon with the 三 seal (Razor Wind) or Morning Star.</td>
@@ -108,7 +108,7 @@
                 <td>Swift Grass<br>Swift Staff<br>Slumber Scroll<br>[Bat Kangaroo]</td>
               </tr>
               <tr>
-                <td rowspan="2">Blindness</td>
+                <td rowspan="2">Blind</td>
                 <td rowspan="2"><img src="/shiren2/image/condition/blind.png" width="70" height="109" alt="Crossed out eyes"></td>
                 <td>10</td>
                 <td class="text_left">Unable to see other characters, items, traps, and stairs.<br>Can still see the current floor's map shape.<br>Cancels the Sight effect if Shiren had eaten Sight Grass.<br>Unable to dash, and cannot step on Gitan without picking it up.<br>All other actions can be performed normally,<br>and attack accuracy remains the same.</td>
@@ -255,7 +255,7 @@
               <tr>
                 <th>Name</th>
                 <th>Visual</th>
-                <th>Turn</th>
+                <th>Turns</th>
                 <th>Info</th>
                 <th>Cause</th>
                 <th>Cure</th>
@@ -303,7 +303,7 @@
                 <td>-</td>
               </tr>
               <tr>
-                <td>Poison Immunity</td>
+                <td>Poison<br>Immunity</td>
                 <td>None</td>
                 <td>Floor</td>
                 <td class="text_left">Specialty Riceball effect.<br>Prevents the loss of strength due to Poison Arrows,<br>Poison Grass, Scorpion, Sheep Priest, and Slug licks.<br>Combination of Scale Shield + Salty Bracelet, but<br>cannot prevent strength loss from Spoiled Riceballs.<br>Like above, a <a href="/shiren2/html/system/glitches.html#no_effect_specialty_riceball">glitch</a> exists where the effect is negated.</td>
@@ -311,7 +311,7 @@
                 <td>-</td>
               </tr>
               <tr>
-                <td>Pick up Identify</td>
+                <td>Pick up<br>Identify</td>
                 <td>None</td>
                 <td>Floor</td>
                 <td class="text_left">Specialty Riceball effect.<br>Items that are picked up, inserted or taken from a pot,<br>or purchased from a Trader will be auto-identified.<br>This includes items inserted into Presto Pots.<br>Does not wear off if revived by Revival Grass.</td>
