split Eat onto a new line for Sight Grass

--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -113,7 +113,7 @@
                 <td>10</td>
                 <td class="text_left">Unable to see other characters, items, traps, and stairs.<br>Can still see the current floor's map shape.<br>Cancels the Sight effect if Shiren had eaten Sight Grass.<br>Unable to dash, and cannot step on Gitan without picking it up.<br>All other actions can be performed normally,<br>and attack accuracy remains the same.</td>
                 <td>Iron Sand Items<br>Spoiled Riceball</td>
-                <td>Sight Grass (Eat)</td>
+                <td>Sight Grass<br>(Eat)</td>
               </tr>
               <tr>
                 <td>∞</td>
